--- a/roles/bind/tasks/main.yml
+++ b/roles/bind/tasks/main.yml
@@ -1,9 +1,17 @@
 ---
 # tasks file for bind9
-- name: Install bind
+- name: Install bind for Ubuntu
   package:
-    pkg: bind9
+    name: bind9
     state: latest
+  when: ansible_distribution == "Ubuntu"
+
+- name: Install bind for CentOS
+  package:
+    name: bind
+    state: latest
+  when: ansible_distribution == "CentOS"
+
 
 - name: Set hostname
   hostname:
