--- a/roles/dhcpd/tasks/main.yml
+++ b/roles/dhcpd/tasks/main.yml
@@ -1,9 +1,18 @@
 ---
 # tasks file for dhcpd
 
-- name: Load distro-specific variables
-  include_vars: "{{ item }}"
-  with_first_found:
-    - "{{ ansible_distribution }}.yml"
-    - "{{ ansible_os_family }}.yml"
-    - "{{ default }}.yml"
+- name: Installing DHCP (Ubuntu)
+  apt:
+   name:
+     - dhcp
+   state: latest
+   update_cache: yes
+  when: ansible_distribution == "Ubuntu"
+
+- name: Installing DHCP (CentOS)
+  dnf:
+   name: 
+     - dhcp
+   state: latest
+   update_cache: yes
+  when: ansible_distribution == "CentOS"
