--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
 # tasks file for mariadb
-- name: Install MariaDB Server 10.3
-  apt: name=mariadb-server state=latest
+- name: Install MariaDB Package
+  apt:
+    name:
+      - mariadb-server
+    state: latest
+    update_cache: yes
