--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -1,8 +1,17 @@
 ---
 # tasks file for mariadb
-- name: Install MariaDB Package
+- name: Install MariaDB Package in Ubuntu
   apt:
     name:
       - mariadb-server
     state: latest
     update_cache: yes
+   when: ansible_distribution == "Ubuntu"
+
+- name: Install MariaDB Package in Centos
+  apt:
+    name:
+      - mariadb-server
+    state: latest
+    update_cache: yes
+   when: ansible_distribution == "Centos"
