--- a/roles/dhcpd/tasks/main.yml
+++ b/roles/dhcpd/tasks/main.yml
@@ -3,16 +3,14 @@
 
 - name: Installing DHCP(Ubuntu)
   apt:
-   name:
-     - dhcp
+   name: isc-dhcp-server
    state: latest
    update_cache: yes
   when: ansible_distribution == "Ubuntu"
 
 - name: Installing DHCP(CentOS)
   dnf:
-   name: 
-     - dhcp
+   name: dhcp-server
    state: latest
    update_cache: yes
   when: ansible_distribution == "CentOS"
